feat: pgadmin container

--- a/compose.yml
+++ b/compose.yml
@@ -10,6 +10,20 @@ services:
       - POSTGRES_DB=${WSRS_DATABASE_NAME}
     volumes:
       - db:/var/lib/postgresql/data
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    restart: unless-stopped
+    depends_on:
+      - db
+    ports:
+      - 8081:80
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: password
+    volumes:
+      - pgadmin:/var/lib/pgadmin
 volumes:
   db:
+    driver: local
+  pgadmin:
     driver: local
